--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,16 @@ select{
     font-size: 26px;
     font-family: sans-serif;
 }
+/* main news display in the page */
+.stories{
+    background: #f1f3f5;
+    text-align: center;
+    color: #333e4f;
+    width: 100%;
+    height: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding-right:20px;
+    min-height: 100px;
+    padding-top: 10px;
+}
