--- a/style.css
+++ b/style.css
@@ -32,3 +32,86 @@ body {
     text-decoration: none;
     color: #fff;
 }
+
+img {
+    height: 100px;
+    margin-right: 50px;
+}
+
+
+/*header,
+footer {
+    width: 100%;
+    padding: 0 26px;
+    position: absolute;
+    height: 90px;
+    background: linear-gradient(135deg, #29aae2, #1b4ea1);
+}
+
+
+/* image logo dimensions 
+
+.logo,
+a,
+img {
+    float: left;
+    height: 100px;
+    margin-right: 50px;
+}
+
+
+/* search input 
+
+.search {
+    margin: 35px;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
+
+/* signin and register specifications 
+
+.signin,
+.register {
+    padding: 40px;
+    color: white;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
+
+/* user option 
+
+select {
+    margin: 40px;
+}
+
+
+/* information to user about news breeze 
+
+.announcement {
+    background: linear-gradient(135deg, #29aae2, #1b4ea1);
+    width: 100%;
+    height: 200px;
+    padding: 0 26px;
+    padding-top: 200px;
+    color: white;
+    font-size: 26px;
+    font-family: sans-serif;
+}
+
+
+/* main news display in the page 
+
+.stories {
+    background: #f1f3f5;
+    text-align: center;
+    color: #333e4f;
+    width: 100%;
+    height: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding-right: 20px;
+    min-height: 100px;
+    padding-top: 10px;
+}*/
