--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 /* header and footer tag */
-header,footer {
+footer {
     width: 100%;
-    padding: 0 26px;
     position: absolute;
     height: 90px;
     background: linear-gradient(135deg,#29aae2,#1b4ea1);
@@ -29,17 +28,6 @@ header,footer {
 select{
    margin: 40px;
 }
-/* information to user about news breeze */
-.announcement{
-    background: linear-gradient(135deg,#29aae2,#1b4ea1);
-    width: 100%;
-    height: 200px;
-    padding: 0 26px;
-    padding-top: 200px;
-    color: white;
-    font-size: 26px;
-    font-family: sans-serif;
-}
 /* main news display in the page */
 .stories{
     background: #f1f3f5;
@@ -52,4 +40,39 @@ select{
     padding-right:20px;
     min-height: 100px;
     padding-top: 10px;
+}
+/* read more styling */
+.read{
+    color: #12737a;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+.article{
+    width: 50px;
+    height: 50px;
+}
+.jumbotron{
+    background: linear-gradient(135deg,#29aae2,#1b4ea1);
+    color: white;
+    width: 100%;
+    height: 300px;
+    font-size: 22px;
+    font-family: sans-serif;
+}
+.action-container {
+    height: 40px;
+    flex: 0 0 auto;
+    padding: 0 16px 1px;
+    margin-top: 8px;
+    position: relative;
+}
+a{
+    height: 30px;
+}
+.stories{
+    width: 860px;
+    padding: 10px;
+    text-align: left;
+    margin-bottom: 5px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
