--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ footer {
     width: 100%;
     position: absolute;
     height: 90px;
+    margin-top: 40px;
     background: linear-gradient(135deg,#29aae2,#1b4ea1);
 }
 /* image logo dimensions */
@@ -37,6 +38,7 @@ select{
     height: auto;
     margin-top: 40px;
     margin-bottom: 40px;
+    margin-left: 60px;
     padding-right:20px;
     min-height: 100px;
     padding-top: 10px;
@@ -70,9 +72,13 @@ a{
     height: 30px;
 }
 .stories{
-    width: 860px;
+    width: 960px;
     padding: 10px;
     text-align: left;
     margin-bottom: 5px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.title-box{
+    text-align: center;
+    margin-bottom: 30px;
 }
