--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,18 @@
 footer {
     width: 100%;
     position: absolute;
-    height: 90px;
+    height: 150px;
     margin-top: 40px;
     background: linear-gradient(135deg,#29aae2,#1b4ea1);
 }
 /* image logo dimensions */
-.logo,a,img{
+.logo img{
+    float: left;
+    height: 200px;
+    width: 200px;
+    margin-right: 50px;
+}
+a,img{
     float: left;
     height: 100px;
     margin-right: 50px;
@@ -17,10 +23,12 @@ footer {
     margin: 35px;
     font-size: 16px;
     font-family: sans-serif;
+    border-radius: 10px;
+    padding-left: 10px;
 }
 /* signin and register specifications */
 .signin, .register, .signout{
-    padding: 30px;
+    padding: 10px;
     color: white;
     font-size: 16px;
     font-family: sans-serif;
@@ -36,7 +44,6 @@ select{
     color: #333e4f;
     width: 960px;
     height: auto;
-    /* margin: 40px 0px 40px 60px; */
     padding-right:20px;
     min-height: 100px;
     padding: 10px;
@@ -56,21 +63,6 @@ select{
     width: 50px;
     height: 50px;
 }
-.jumbotron{
-    background: linear-gradient(135deg,#29aae2,#1b4ea1);
-    color: white;
-    width: 100%;
-    height: 300px;
-    font-size: 22px;
-    font-family: sans-serif;
-}
-/* .action-container {
-    height: 60px;
-    flex: 0 0 auto;
-    padding: 0 16px 1px;
-    margin-top: 8px;
-    position: relative;
-} */
 a{
     height: 20px;
 }
@@ -98,7 +90,11 @@ a{
     margin: 20px;
     font-size: 16px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border-radius: 10px;
+    border-radius: 30px;
+    background: linear-gradient(#e66465, #9198e5);
+    color: white;
+    width: 100px;
+    border: none;
 
 }
 /* styling the cards */
@@ -110,7 +106,7 @@ a{
 /* footer nav style */
 nav h3{
     text-align:center;
-    padding: 10px;
+    padding-top: 70px;
     font-size: 1.5em;
     color: white;
 }
@@ -131,4 +127,46 @@ nav h3{
 }
 .weather{
     display: block;
+}
+/* aniamting the header image*/
+header{
+    margin: 0;
+    padding: 0;
+    height: 400px;
+    background: url(../images/bg.jpg);
+    background-size: cover;
+    animation: animateBg 60s linear infinite;
+}
+.pulse{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+    background: url(../images/earth.png);
+    background-size: cover;
+    animation: animateEarth 12s linear infinite;
+    border-radius: 50%;
+    box-shadow: inset 0 0 40px rgba(225,225,225,.5);
+}
+@keyframes animateEarth{
+    0%{
+        background-position: 0 0;
+    }
+    100%{
+        background-position: 719px 0;
+    }
+}
+@keyframes animateBg{
+    0%{
+        background-position: 0 0;
+    }
+    100%{
+        background-position: 1600px 0;
+    }
+}
+.nav-box a{
+    padding-top: 50px;
+    height: 100px;
 }
