--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,17 @@ footer {
 }
 /* image logo dimensions */
 .logo img{
-    float: left;
+    position: absolute;
     height: 200px;
     width: 200px;
-    margin-right: 50px;
+    top: 25%;
+    left: 40%;
+}
+.logo1 img{
+    
+    height: 200px;
+    width: 200px;
+    
 }
 a,img{
     float: left;
@@ -21,6 +28,10 @@ a,img{
 }
 /* search input */
 .search{
+    position: absolute;
+    top: 5%;
+    left:65%;
+    margin-left: 50px;
     margin: 35px;
     font-size: 16px;
     font-family: sans-serif;
@@ -28,7 +39,7 @@ a,img{
     padding-left: 10px;
 }
 /* signin and register specifications */
-.signin, .register, .signout{
+.signin, .signup, .signout{
     padding: 10px;
     color: white;
     font-size: 16px;
@@ -71,22 +82,11 @@ a{
     text-align: center;
     margin-bottom: 30px;
 }
-/* Can combine this with overflow-hidden to make background images grow on hover
- * even if you are using background-size: cover */
-
-.grow {
-  -moz-osx-font-smoothing: grayscale;
-  backface-visibility: hidden;
-  transform: translateZ(0);
-  transition: transform 0.25s ease-out;
-}
-
-.grow:hover,
-.grow:focus {
-  transform: scale(1.05);
-}
 /* Submit button */
 .button{
+    position: absolute;
+    top: 6%;
+    left:85%;
     padding: 10px;
     margin: 20px;
     font-size: 16px;
@@ -168,11 +168,26 @@ header{
         background-position: 1600px 0;
     }
 }
-.nav-box a{
+ .signin, .signup, .signout{
+    position: absolute;
+    width:960px;
     padding-top: 50px;
     height: 100px;
+    top: 5%;
+    left:2.5%;
+    margin-left: 50px;
+    width: 100px;
+}
+.signup{
+    left:10%;
+    width: 100px;
+}
+.signout{
+   left:20%;
+   width: 100px;
 }
 /* //modified the modal dimensions */
+    
 .modal .modal-dialog {
     width: 100px; /* New width for default modal */
     height: 250px;
