--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,27 +24,29 @@ a,img{
     float: left;
     height: 100px;
     margin-right: 50px;
+}
 
-}
-/* search input */
-.search{
-    position: absolute;
-    top: 5%;
-    left:65%;
-    margin-left: 50px;
-    margin: 35px;
-    font-size: 16px;
-    font-family: sans-serif;
-    border-radius: 10px;
-    padding-left: 10px;
-}
-/* signin and register specifications */
 .signin, .signup, .signout{
-    padding: 10px;
     color: white;
-    font-size: 16px;
+    margin-top: 40px;
+    font-size: 20px;
     font-family: sans-serif;
 }
+#submit, #search{
+    color: white;
+    margin-top: 20px;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+#submit{
+    padding-top: 50px;
+}
+#search{
+     
+    width: 150px;
+    margin-top: 40px;
+}
+
 /* user option */
 select{
    margin: 20px;
@@ -81,23 +83,6 @@ a{
 .title-box{
     text-align: center;
     margin-bottom: 30px;
-}
-/* Submit button */
-.button{
-    position: absolute;
-    top: 6%;
-    left:85%;
-    padding: 10px;
-    margin: 20px;
-    font-size: 16px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border-radius: 30px;
-    /* background: linear-gradient(#e66465, #9198e5); */
-    background:rgb(236, 199, 131);
-    color:black;
-    width: 100px;
-    border: none;
-
 }
 /* styling the cards */
 .card{
@@ -168,24 +153,7 @@ header{
         background-position: 1600px 0;
     }
 }
- .signin, .signup, .signout{
-    position: absolute;
-    width:960px;
-    padding-top: 50px;
-    height: 100px;
-    top: 5%;
-    left:2.5%;
-    margin-left: 50px;
-    width: 100px;
-}
-.signup{
-    left:10%;
-    width: 100px;
-}
-.signout{
-   left:20%;
-   width: 100px;
-}
+ 
 /* //modified the modal dimensions */
     
 .modal .modal-dialog {
