--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/* ---------------------index.html------------------- */
+ /* header */
+
+
+
+
+
 /* header and footer tag */
 footer {
     width: 100%;
@@ -175,6 +182,7 @@ header{
     height: 50px;
     padding-top: 15px;
 }
+/* --------------------------------pollen----------------------- */
 /* change the color based on pollen level in the air */
 .good{
     background: green;
