--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,9 +136,9 @@ nav h3{
     width: 50px;
     height: 50px;
 } */
-a{
+/* a{
     height: 20px;
-}
+} */
 
 
 
@@ -159,25 +159,25 @@ a{
 /* modal styling in index.html for each article */
 /* //modified the modal dimensions */
     
-.modal .modal-dialog {
-    width: 100px; /* New width for default modal */
+/* /* .modal .modal-dialog {
+    width: 100px; /* New width for default modal 
     height: 250px;
 }
 .modal-body{
     height:100px;
-}
+} */
 /* twitter logo dimensions */
-.twitter{
+/* .twitter{
     width: 50px;
     height: 50px;
     padding-bottom: 15px;
-}
+} */
 /* email logo dimensions */
-.email{
+/* .email{
     width: 50px;
     height: 50px;
     padding-top: 15px;
-}
+} */
 /* --------------------------------pollen----------------------- */
 /* change the color based on pollen level in the air */
 .good{
